# memory-allocators-wasm

./: .gitignore  readme.md
allocators/: build_and_test.sh
allocators/buddy_alloc_benchmark/: Cargo.toml  bench.js
allocators/buddy_alloc_benchmark/benches/: buddy_alloc.rs
allocators/buddy_alloc_benchmark/src/: lib.rs
allocators/dlmalloc_benchmark/: Cargo.toml  bench.js
allocators/dlmalloc_benchmark/benches/: dlmalloc.rs
allocators/dlmalloc_benchmark/src/: lib.rs
allocators/output/buddy_alloc/: criterion_throughput_results.txt  random_actions_results.txt
allocators/output/dlmalloc/: criterion_throughput_results.txt  random_actions_results.txt
allocators/output/rlsf/: criterion_throughput_results.txt  random_actions_results.txt
allocators/output/talc/: criterion_throughput_results.txt  random_actions_results.txt
allocators/output/wee_alloc/: random_actions_results.txt
allocators/rlsf_benchmark/: Cargo.toml  bench.js
allocators/rlsf_benchmark/benches/: rlsf.rs
allocators/rlsf_benchmark/src/: lib.rs
allocators/talc_benchmark/: Cargo.toml  bench.js
allocators/talc_benchmark/benches/: talc.rs
allocators/talc_benchmark/src/: lib.rs
allocators/wee_alloc_benchmark/: Cargo.toml  bench.js
allocators/wee_alloc_benchmark/src/: lib.rs
application_bench/: build_and_test.sh
application_bench/crypto/buddy_crypto/: Cargo.toml  bench.js
application_bench/crypto/buddy_crypto/src/: lib.rs
application_bench/crypto/dlmalloc_crypto/: Cargo.toml  bench.js
application_bench/crypto/dlmalloc_crypto/src/: lib.rs
application_bench/crypto/rlsf_crypto/: Cargo.toml  bench.js
application_bench/crypto/rlsf_crypto/src/: lib.rs
application_bench/crypto/talc_crypto/: Cargo.toml  bench.js
application_bench/crypto/talc_crypto/src/: lib.rs
application_bench/crypto/wee_crypto/: Cargo.toml  bench.js
application_bench/crypto/wee_crypto/src/: lib.rs
application_bench/image/buddy_image/: Cargo.toml
application_bench/image/buddy_image/src/: lib.rs
application_bench/image/dlmalloc_image/: Cargo.toml  bench.js
application_bench/image/rlsf_image/: Cargo.toml
application_bench/image/rlsf_image/benches/: rlsf_image.rs
application_bench/image/rlsf_image/src/: lib.rs
application_bench/image/talc_image/: Cargo.toml
application_bench/image/talc_image/src/: lib.rs
application_bench/image/wee_image/: Cargo.toml
application_bench/image/wee_image/src/: lib.rs
application_bench/output/crypto/: buddy_results.txt  dlmalloc_results.txt  rlsf_results.txt  talc_results.txt  wee_results.txt
application_bench/output/image/: buddy_results.txt  dlmalloc_results.txt  rlsf_results.txt  talc_results.txt  wee_results.txt
application_bench/output/webserver/: result_buddy.txt  result_dlmalloc.txt  result_rlsf.txt  result_talc.txt  result_wee.txt
application_bench/webserver/: load_todos.txt  result_buddy.txt  result_dlmalloc.txt  result_rlsf.txt  result_talc.txt  result_wee.txt
application_bench/webserver/api_server/: Cargo.toml
application_bench/webserver/api_server/src/: main.rs
(+2 files in other folders)
