[package]
name = "talc_benchmark"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.92"
spin = "0.9.8"

[dependencies.talc]
version = "4.4.1"
default-features = false
features = ["lock_api"]
optional = true
