[package]
name = "buddy_image"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# wasm-bindgen = "0.2.92"
buddy-alloc = "0.5.1"
fastrand = "2.0.2"
# console_error_panic_hook = "0.1.7"
# web-sys = { version = "0.3.67", features = ["Window", "Performance"] }
photon-rs = "0.3.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "buddy_image"
harness = false
