[package]
name = "talc_image"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
photon-rs = "0.3.2"
spin = "0.9.8"

[dependencies.talc]
version = "4.4.1"
default-features = false
features = ["lock_api"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "talc_image"
harness = false
