[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
pretty_env_logger = "0.4.0"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.1", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4"] }
warp = "0.3.3"
# buddy-alloc = "0.5.1"
# rlsf = "0.2.1"
# spin = "0.9.8"
# [dependencies.talc]
# version = "4.4.1"
# default-features = false
# features = ["lock_api"]
# wee_alloc = { version = "0.4.5", features = ["size_classes"] }
